--- a/roles/setup_tomcat/tasks/main.yml
+++ b/roles/setup_tomcat/tasks/main.yml
@@ -1,2 +1,23 @@
 ---
 # tasks file for setup_tomcat
+
+- name: install tomcat
+  yum:
+    name: tomcat
+    state: latest
+
+- name: create ansible tomcat directory
+  file:
+    path: /usr/share/tomcat/webapps/ansible
+    state: directory
+
+- name: copy static index.html to tomcat webapps/ansible/index.html
+  template:
+    src:  index.html.j2
+    dest: /usr/share/tomcat/webapps/ansible/index.html
+    mode: 0644
+
+- name: start tomcat
+  service:
+    name: tomcat
+    state: started
