--- a/ssh.cfg
+++ b/ssh.cfg
@@ -1,21 +1,13 @@
-#
-# Example ssh.cfg for jumphost
-# Change User and IdentityFile(s) as necessary
-#
+Host workstation-0f4b.rhpds.opentlc.com
+ Hostname workstation-0f4b.rhpds.opentlc.com
+ IdentityFile ~/.ssh/openstack.pem
+ ForwardAgent yes
+ User cloud-user
+ StrictHostKeyChecking no
+ PasswordAuthentication no
 
-Host bastion 
-  Hostname bastion.5463.example.opentlc.com
-  User ankay-redhat.com
-
-Host *.internal
-  User ec2-user
-  ProxyJump bastion
-
-Match User ec2-user
-  IdentityFile ~/.ssh/5463key.pem
-
-Host *
-  ControlMaster auto
-  ControlPath /tmp/%h-%r
-  ControlPersist 5m
-  StrictHostKeyChecking no
+Host 10.10.10.*
+ User cloud-user
+ IdentityFile ~/.ssh/openstack.pem
+ ProxyCommand ssh -F ./ssh.cfg workstation-0f4b.rhpds.opentlc.com -W %h:%p
+ StrictHostKeyChecking no
