--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,10 @@
 [defaults]
-inventory=./inventory/
+inventory=./osp_jumpbox_inventory
+
+[privilege_escalation]
+become=True
+become_method=sudo
+
+[ssh_connection]
+ssh_args=" -F ./ssh.cfg -o ControlMaster=auto -o ControlPersist=60s"
+host_key_checking=False
